libaudio_coding_files = files(
    'acm2/acm_receiver.cc',
    'acm2/acm_receiver.h',
    'acm2/acm_resampler.cc',
    'acm2/acm_resampler.h',
    'acm2/audio_coding_module.cc',
    'acm2/call_statistics.cc',
    'acm2/call_statistics.h',
    'acm2/codec_manager.cc',
    'acm2/codec_manager.h',
    'include/audio_coding_module.h',

    # audio_format_conversion
    'codecs/audio_format_conversion.cc',
    'codecs/audio_format_conversion.h',

    # rent_a_codec
    'acm2/acm_codec_database.cc',
    'acm2/acm_codec_database.h',
    'acm2/rent_a_codec.cc',
    'acm2/rent_a_codec.h',

    # legacy_encoded_audio_frame
    'codecs/legacy_encoded_audio_frame.cc',
    'codecs/legacy_encoded_audio_frame.h',
    
    # cng
    'codecs/cng/audio_encoder_cng.cc',
    'codecs/cng/audio_encoder_cng.h',
    'codecs/cng/webrtc_cng.cc',
    'codecs/cng/webrtc_cng.h',

    # red
    #'codecs/red/audio_encoder_copy_red.cc',
    #'codecs/red/audio_encoder_copy_red.h',

    # g711
    'codecs/g711/audio_decoder_pcm.cc',
    'codecs/g711/audio_decoder_pcm.h',
    'codecs/g711/audio_encoder_pcm.cc',
    'codecs/g711/audio_encoder_pcm.h',

    # g711_c
    'codecs/g711/g711.c',
    'codecs/g711/g711.h',
    'codecs/g711/g711_interface.c',
    'codecs/g711/g711_interface.h',

    # g722
    'codecs/g722/audio_decoder_g722.cc',
    'codecs/g722/audio_decoder_g722.h',
    'codecs/g722/audio_encoder_g722.cc',
    'codecs/g722/audio_encoder_g722.h',

    # g722_c
    'codecs/g722/g722_decode.c',
    'codecs/g722/g722_enc_dec.h',
    'codecs/g722/g722_encode.c',
    'codecs/g722/g722_interface.c',
    'codecs/g722/g722_interface.h',

    # ilbc
    #'codecs/ilbc/audio_decoder_ilbc.cc',
    #'codecs/ilbc/audio_decoder_ilbc.h',
    #'codecs/ilbc/audio_encoder_ilbc.cc',
    #'codecs/ilbc/audio_encoder_ilbc.h',

    # ilbc_c
    # OMITTED...

    # isac_common
    'codecs/isac/audio_decoder_isac_t.h',
    'codecs/isac/audio_decoder_isac_t_impl.h',
    'codecs/isac/audio_encoder_isac_t.h',
    'codecs/isac/audio_encoder_isac_t_impl.h',
    'codecs/isac/bandwidth_info.h',
    'codecs/isac/locked_bandwidth_info.cc',
    'codecs/isac/locked_bandwidth_info.h',

    # isac
    'codecs/isac/main/include/audio_decoder_isac.h',
    'codecs/isac/main/include/audio_encoder_isac.h',
    'codecs/isac/main/source/audio_decoder_isac.cc',
    'codecs/isac/main/source/audio_encoder_isac.cc',

    # isac_c isac_fix isac_fix_common isac_fix_c
    # OMITTED

    # pcm16b
    'codecs/pcm16b/audio_decoder_pcm16b.cc',
    'codecs/pcm16b/audio_decoder_pcm16b.h',
    'codecs/pcm16b/audio_encoder_pcm16b.cc',
    'codecs/pcm16b/audio_encoder_pcm16b.h',
    'codecs/pcm16b/pcm16b_common.cc',
    'codecs/pcm16b/pcm16b_common.h',

    # pcm16b_c
    'codecs/pcm16b/pcm16b.c',
    'codecs/pcm16b/pcm16b.h',

    # webrtc_opus
    'codecs/opus/audio_decoder_opus.cc',
    'codecs/opus/audio_decoder_opus.h',
    'codecs/opus/audio_encoder_opus.cc',
    'codecs/opus/audio_encoder_opus.h',

    # webrtc_opus_c
    'codecs/opus/opus_inst.h',
    'codecs/opus/opus_interface.c',
    'codecs/opus/opus_interface.h',

    # audio_network_adapter_config
    'audio_network_adaptor/audio_network_adaptor_config.cc',
    'audio_network_adaptor/include/audio_network_adaptor_config.h',

    # audio_network_adaptor
    'audio_network_adaptor/audio_network_adaptor_impl.cc',
    'audio_network_adaptor/audio_network_adaptor_impl.h',
    'audio_network_adaptor/bitrate_controller.cc',
    'audio_network_adaptor/bitrate_controller.h',
    'audio_network_adaptor/channel_controller.cc',
    'audio_network_adaptor/channel_controller.h',
    'audio_network_adaptor/controller.cc',
    'audio_network_adaptor/controller.h',
    'audio_network_adaptor/controller_manager.cc',
    'audio_network_adaptor/controller_manager.h',
    'audio_network_adaptor/debug_dump_writer.cc',
    'audio_network_adaptor/debug_dump_writer.h',
    'audio_network_adaptor/dtx_controller.cc',
    'audio_network_adaptor/dtx_controller.h',
    'audio_network_adaptor/event_log_writer.cc',
    'audio_network_adaptor/event_log_writer.h',
    'audio_network_adaptor/fec_controller_plr_based.cc',
    'audio_network_adaptor/fec_controller_plr_based.h',
    'audio_network_adaptor/fec_controller_rplr_based.cc',
    'audio_network_adaptor/fec_controller_rplr_based.h',
    'audio_network_adaptor/frame_length_controller.cc',
    'audio_network_adaptor/frame_length_controller.h',
    'audio_network_adaptor/include/audio_network_adaptor.h',
    'audio_network_adaptor/util/threshold_curve.h',

    # neteq_decoder_enum
    'neteq/neteq_decoder_enum.cc',
    'neteq/neteq_decoder_enum.h',

    # neteq

    'neteq/accelerate.cc',
    'neteq/accelerate.h',
    'neteq/audio_multi_vector.cc',
    'neteq/audio_multi_vector.h',
    'neteq/audio_vector.cc',
    'neteq/audio_vector.h',
    'neteq/background_noise.cc',
    'neteq/background_noise.h',
    'neteq/buffer_level_filter.cc',
    'neteq/buffer_level_filter.h',
    'neteq/comfort_noise.cc',
    'neteq/comfort_noise.h',
    'neteq/cross_correlation.cc',
    'neteq/cross_correlation.h',
    'neteq/decision_logic.cc',
    'neteq/decision_logic.h',
    'neteq/decision_logic_fax.cc',
    'neteq/decision_logic_fax.h',
    'neteq/decision_logic_normal.cc',
    'neteq/decision_logic_normal.h',
    'neteq/decoder_database.cc',
    'neteq/decoder_database.h',
    'neteq/defines.h',
    'neteq/delay_manager.cc',
    'neteq/delay_manager.h',
    'neteq/delay_peak_detector.cc',
    'neteq/delay_peak_detector.h',
    'neteq/dsp_helper.cc',
    'neteq/dsp_helper.h',
    'neteq/dtmf_buffer.cc',
    'neteq/dtmf_buffer.h',
    'neteq/dtmf_tone_generator.cc',
    'neteq/dtmf_tone_generator.h',
    'neteq/expand.cc',
    'neteq/expand.h',
    'neteq/include/neteq.h',
    'neteq/merge.cc',
    'neteq/merge.h',
    'neteq/nack_tracker.cc',
    'neteq/nack_tracker.h',
    'neteq/neteq.cc',
    'neteq/neteq_impl.cc',
    'neteq/neteq_impl.h',
    'neteq/normal.cc',
    'neteq/normal.h',
    'neteq/packet.cc',
    'neteq/packet.h',
    'neteq/packet_buffer.cc',
    'neteq/packet_buffer.h',
    'neteq/post_decode_vad.cc',
    'neteq/post_decode_vad.h',
    'neteq/preemptive_expand.cc',
    'neteq/preemptive_expand.h',
    'neteq/random_vector.cc',
    'neteq/random_vector.h',
    'neteq/red_payload_splitter.cc',
    'neteq/red_payload_splitter.h',
    'neteq/rtcp.cc',
    'neteq/rtcp.h',
    'neteq/statistics_calculator.cc',
    'neteq/statistics_calculator.h',
    'neteq/sync_buffer.cc',
    'neteq/sync_buffer.h',
    'neteq/tick_timer.cc',
    'neteq/tick_timer.h',
    'neteq/time_stretch.cc',
    'neteq/time_stretch.h',
    'neteq/timestamp_scaler.cc',
    'neteq/timestamp_scaler.h',
)

# C files
libaudio_coding_files += files(
'codecs/isac/main/include/isac.h',
    'codecs/isac/main/source/arith_routines.c',
    'codecs/isac/main/source/arith_routines.h',
    'codecs/isac/main/source/arith_routines_hist.c',
    'codecs/isac/main/source/arith_routines_logist.c',
    'codecs/isac/main/source/bandwidth_estimator.c',
    'codecs/isac/main/source/bandwidth_estimator.h',
    'codecs/isac/main/source/codec.h',
    'codecs/isac/main/source/crc.c',
    'codecs/isac/main/source/crc.h',
    'codecs/isac/main/source/decode.c',
    'codecs/isac/main/source/decode_bwe.c',
    'codecs/isac/main/source/encode.c',
    'codecs/isac/main/source/encode_lpc_swb.c',
    'codecs/isac/main/source/encode_lpc_swb.h',
    'codecs/isac/main/source/entropy_coding.c',
    'codecs/isac/main/source/entropy_coding.h',
    'codecs/isac/main/source/fft.c',
    'codecs/isac/main/source/fft.h',
    'codecs/isac/main/source/filter_functions.c',
    'codecs/isac/main/source/filterbank_tables.c',
    'codecs/isac/main/source/filterbank_tables.h',
    'codecs/isac/main/source/filterbanks.c',
    'codecs/isac/main/source/intialize.c',
    'codecs/isac/main/source/isac.c',
    'codecs/isac/main/source/isac_float_type.h',
    'codecs/isac/main/source/lattice.c',
    'codecs/isac/main/source/lpc_analysis.c',
    'codecs/isac/main/source/lpc_analysis.h',
    'codecs/isac/main/source/lpc_gain_swb_tables.c',
    'codecs/isac/main/source/lpc_gain_swb_tables.h',
    'codecs/isac/main/source/lpc_shape_swb12_tables.c',
    'codecs/isac/main/source/lpc_shape_swb12_tables.h',
    'codecs/isac/main/source/lpc_shape_swb16_tables.c',
    'codecs/isac/main/source/lpc_shape_swb16_tables.h',
    'codecs/isac/main/source/lpc_tables.c',
    'codecs/isac/main/source/lpc_tables.h',
    'codecs/isac/main/source/os_specific_inline.h',
    'codecs/isac/main/source/pitch_estimator.c',
    'codecs/isac/main/source/pitch_estimator.h',
    'codecs/isac/main/source/pitch_filter.c',
    'codecs/isac/main/source/pitch_gain_tables.c',
    'codecs/isac/main/source/pitch_gain_tables.h',
    'codecs/isac/main/source/pitch_lag_tables.c',
    'codecs/isac/main/source/pitch_lag_tables.h',
    'codecs/isac/main/source/settings.h',
    'codecs/isac/main/source/spectrum_ar_model_tables.c',
    'codecs/isac/main/source/spectrum_ar_model_tables.h',
    'codecs/isac/main/source/structs.h',
    'codecs/isac/main/source/transform.c',
)


libaudio_coding = static_library(
  'audio_coding',
  libaudio_coding_files,
  dependencies: dep_opus,
  include_directories : [inc_common],
  cpp_args : internal_args,
)

all_libraries += libaudio_coding
