librtp_rtcp_files = files(
    'include/flexfec_receiver.h',
    'include/flexfec_sender.h',
    'include/receive_statistics.h',
    'include/remote_ntp_time_estimator.h',
    'include/rtp_header_parser.h',
    'include/rtp_payload_registry.h',
    'include/rtp_receiver.h',
    'include/rtp_rtcp.h',
    'include/ulpfec_receiver.h',
    'source/dtmf_queue.cc',
    'source/dtmf_queue.h',
    'source/fec_private_tables_bursty.cc',
    'source/fec_private_tables_bursty.h',
    'source/fec_private_tables_random.cc',
    'source/fec_private_tables_random.h',
    'source/flexfec_header_reader_writer.cc',
    'source/flexfec_header_reader_writer.h',
    'source/flexfec_receiver.cc',
    'source/flexfec_sender.cc',
    'source/forward_error_correction.cc',
    'source/forward_error_correction.h',
    'source/forward_error_correction_internal.cc',
    'source/forward_error_correction_internal.h',
    'source/packet_loss_stats.cc',
    'source/packet_loss_stats.h',
    'source/playout_delay_oracle.cc',
    'source/playout_delay_oracle.h',
    'source/receive_statistics_impl.cc',
    'source/receive_statistics_impl.h',
    'source/remote_ntp_time_estimator.cc',
    'source/rtcp_nack_stats.cc',
    'source/rtcp_nack_stats.h',
    'source/rtcp_receiver.cc',
    'source/rtcp_receiver.h',
    'source/rtcp_sender.cc',
    'source/rtcp_sender.h',
    'source/rtp_format.cc',
    'source/rtp_format.h',
    'source/rtp_format_h264.cc',
    'source/rtp_format_h264.h',
    'source/rtp_format_video_generic.cc',
    'source/rtp_format_video_generic.h',
    'source/rtp_format_vp8.cc',
    'source/rtp_format_vp8.h',
    'source/rtp_format_vp9.cc',
    'source/rtp_format_vp9.h',
    'source/rtp_header_parser.cc',
    'source/rtp_packet_history.cc',
    'source/rtp_packet_history.h',
    'source/rtp_payload_registry.cc',
    'source/rtp_receiver_audio.cc',
    'source/rtp_receiver_audio.h',
    'source/rtp_receiver_impl.cc',
    'source/rtp_receiver_impl.h',
    'source/rtp_receiver_strategy.cc',
    'source/rtp_receiver_strategy.h',
    'source/rtp_receiver_video.cc',
    'source/rtp_receiver_video.h',
    'source/rtp_rtcp_config.h',
    'source/rtp_rtcp_impl.cc',
    'source/rtp_rtcp_impl.h',
    'source/rtp_sender.cc',
    'source/rtp_sender.h',
    'source/rtp_sender_audio.cc',
    'source/rtp_sender_audio.h',
    'source/rtp_sender_video.cc',
    'source/rtp_sender_video.h',
    'source/rtp_utility.cc',
    'source/rtp_utility.h',
    'source/time_util.cc',
    'source/time_util.h',
    'source/tmmbr_help.cc',
    'source/tmmbr_help.h',
    'source/ulpfec_generator.cc',
    'source/ulpfec_generator.h',
    'source/ulpfec_header_reader_writer.cc',
    'source/ulpfec_header_reader_writer.h',
    'source/ulpfec_receiver_impl.cc',
    'source/ulpfec_receiver_impl.h',
    'source/video_codec_information.h',

    # rtp_rtcp_format
    'include/rtp_rtcp_defines.cc',
    'source/rtcp_packet.cc',
    'source/rtcp_packet/app.cc',
    'source/rtcp_packet/bye.cc',
    'source/rtcp_packet/common_header.cc',
    'source/rtcp_packet/compound_packet.cc',
    'source/rtcp_packet/dlrr.cc',
    'source/rtcp_packet/extended_jitter_report.cc',
    'source/rtcp_packet/extended_reports.cc',
    'source/rtcp_packet/fir.cc',
    'source/rtcp_packet/nack.cc',
    'source/rtcp_packet/pli.cc',
    'source/rtcp_packet/psfb.cc',
    'source/rtcp_packet/rapid_resync_request.cc',
    'source/rtcp_packet/receiver_report.cc',
    'source/rtcp_packet/remb.cc',
    'source/rtcp_packet/report_block.cc',
    'source/rtcp_packet/rrtr.cc',
    'source/rtcp_packet/rtpfb.cc',
    'source/rtcp_packet/sdes.cc',
    'source/rtcp_packet/sender_report.cc',
    'source/rtcp_packet/target_bitrate.cc',
    'source/rtcp_packet/tmmb_item.cc',
    'source/rtcp_packet/tmmbn.cc',
    'source/rtcp_packet/tmmbr.cc',
    'source/rtcp_packet/transport_feedback.cc',
    'source/rtcp_packet/voip_metric.cc',
    'source/rtp_header_extension_map.cc',
    'source/rtp_header_extensions.cc',
    'source/rtp_packet.cc',
    'source/rtp_packet_received.cc',
    'source/rtp_packet_to_send.cc',

    # rtp_transciever
    'source/rtcp_transceiver.cc',
    'source/rtcp_transceiver_config.cc',
    'source/rtcp_transceiver_impl.cc',
)


librtp_rtcp = static_library(
  'jingle_peerconnection_rtp_rtcp',
  librtp_rtcp_files,
  include_directories : [inc_common],
  cpp_args: internal_args,
)

all_libraries += librtp_rtcp
