libvideo_coding_files = files(
'codec_timer.cc',
    'codec_timer.h',
    'decoder_database.cc',
    'decoder_database.h',
    'decoding_state.cc',
    'decoding_state.h',
    'encoder_database.cc',
    'encoder_database.h',
    'fec_controller_default.cc',
    'fec_controller_default.h',
    'fec_rate_table.h',
    'frame_buffer.cc',
    'frame_buffer.h',
    'frame_buffer2.cc',
    'frame_buffer2.h',
    'frame_object.cc',
    'frame_object.h',
    'generic_decoder.cc',
    'generic_decoder.h',
    'generic_encoder.cc',
    'generic_encoder.h',
    'h264_sprop_parameter_sets.cc',
    'h264_sprop_parameter_sets.h',
    'h264_sps_pps_tracker.cc',
    'h264_sps_pps_tracker.h',
    'histogram.cc',
    'histogram.h',
    'include/video_codec_initializer.h',
    'include/video_coding.h',
    'inter_frame_delay.cc',
    'inter_frame_delay.h',
    'internal_defines.h',
    'jitter_buffer.cc',
    'jitter_buffer.h',
    'jitter_buffer_common.h',
    'jitter_estimator.cc',
    'jitter_estimator.h',
    'media_opt_util.cc',
    'media_opt_util.h',
    'media_optimization.cc',
    'media_optimization.h',
    'nack_fec_tables.h',
    'nack_module.cc',
    'nack_module.h',
    'packet.cc',
    'packet.h',
    'packet_buffer.cc',
    'packet_buffer.h',
    'qp_parser.cc',
    'qp_parser.h',
    'receiver.cc',
    'receiver.h',
    'rtp_frame_reference_finder.cc',
    'rtp_frame_reference_finder.h',
    'rtt_filter.cc',
    'rtt_filter.h',
    'session_info.cc',
    'session_info.h',
    'timestamp_map.cc',
    'timestamp_map.h',
    'timing.cc',
    'timing.h',
    'video_codec_initializer.cc',
    'video_coding_impl.cc',
    'video_coding_impl.h',
    'video_receiver.cc',
    'video_sender.cc',

    # encoded_frame
    'encoded_frame.cc',
    'encoded_frame.h',

    # video_codec_interface
    'include/video_codec_interface.h',
    'include/video_coding_defines.h',
    'include/video_error_codes.h',
    'video_coding_defines.cc',

    # video_coding_utility
    'utility/default_video_bitrate_allocator.cc',
    'utility/default_video_bitrate_allocator.h',
    'utility/frame_dropper.cc',
    'utility/frame_dropper.h',
    'utility/ivf_file_writer.cc',
    'utility/ivf_file_writer.h',
    'utility/moving_average.cc',
    'utility/moving_average.h',
    'utility/quality_scaler.cc',
    'utility/quality_scaler.h',
    'utility/vp8_header_parser.cc',
    'utility/vp8_header_parser.h',
    'utility/vp9_uncompressed_header_parser.cc',
    'utility/vp9_uncompressed_header_parser.h',

    # TODO: make dependent on H264 Flag
    # webrtc_h264
    'codecs/h264/h264.cc',
    'codecs/h264/include/h264.h',

    'codecs/h264/h264_decoder_impl.cc',
    'codecs/h264/h264_decoder_impl.h',
    'codecs/h264/h264_encoder_impl.cc',
    'codecs/h264/h264_encoder_impl.h',

    # webrtc_i420
    'codecs/i420/i420.cc',
    'codecs/i420/include/i420.h',

    # webrtc_multiplex
    'codecs/multiplex/include/multiplex_decoder_adapter.h',
    'codecs/multiplex/include/multiplex_encoded_image_packer.h',
    'codecs/multiplex/include/multiplex_encoder_adapter.h',
    'codecs/multiplex/multiplex_decoder_adapter.cc',
    'codecs/multiplex/multiplex_encoded_image_packer.cc',
    'codecs/multiplex/multiplex_encoder_adapter.cc',

    # webrtc_vp8_helpers
    'codecs/vp8/default_temporal_layers.cc',
    'codecs/vp8/default_temporal_layers.h',
    'codecs/vp8/include/vp8.h',
    'codecs/vp8/include/vp8_common_types.h',
    'codecs/vp8/screenshare_layers.cc',
    'codecs/vp8/screenshare_layers.h',
    'codecs/vp8/simulcast_rate_allocator.cc',
    'codecs/vp8/simulcast_rate_allocator.h',
    'codecs/vp8/temporal_layers.cc',
    'codecs/vp8/temporal_layers.h',

    # webrtc_vp8
    'codecs/vp8/include/vp8.h',
    'codecs/vp8/include/vp8_common_types.h',
    'codecs/vp8/libvpx_vp8_decoder.cc',
    'codecs/vp8/libvpx_vp8_decoder.h',
    'codecs/vp8/libvpx_vp8_encoder.cc',
    'codecs/vp8/libvpx_vp8_encoder.h',

    # webrtc_vp9_helpers
    'codecs/vp9/svc_config.cc',
    'codecs/vp9/svc_config.h',
    'codecs/vp9/svc_rate_allocator.cc',
    'codecs/vp9/svc_rate_allocator.h',

    # webrtc_vp9
    'codecs/vp9/include/vp9.h',
    'codecs/vp9/screenshare_layers.cc',
    'codecs/vp9/screenshare_layers.h',
    'codecs/vp9/vp9_frame_buffer_pool.cc',
    'codecs/vp9/vp9_frame_buffer_pool.h',
    'codecs/vp9/vp9_impl.cc',
    'codecs/vp9/vp9_impl.h',
)


libvideo_coding = static_library(
  'video_coding',
  libvideo_coding_files,
  include_directories : [inc_common],
  cpp_args: internal_args,
)

all_libraries += libvideo_coding
